Bug 90398 - [BDW Regression]ARNING: CPU: 0 PID: 1215 at drivers/gpu/drm/drm_irq.c:1159 drm_wait_one_vblank+0x3b/0x16d [drm] while clean boot system
Summary: [BDW Regression]ARNING: CPU: 0 PID: 1215 at drivers/gpu/drm/drm_irq.c:1159 dr...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: high normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-05-11 07:15 UTC by lu hua
Modified: 2017-07-24 22:47 UTC (History)
4 users (show)

See Also:
i915 platform: BDW
i915 features: display/Other


Attachments
dmesg (122.09 KB, text/plain)
2015-05-11 07:15 UTC, lu hua
no flags Details

Description lu hua 2015-05-11 07:15:04 UTC
Created attachment 115685 [details]
dmesg

==System Environment==
--------------------------
Regression: yes

good commit:75d04a3773ecee617847de963ae4195d6aa74c28
bad commit: c457879f0d8f664050e46092afde46fec58c9e67

Non-working platforms: BDW

==kernel==
--------------------------
drm-intel-nightly/a1e469d124cad96cd0d0e149c84f7ebd43ca1893
commit a1e469d124cad96cd0d0e149c84f7ebd43ca1893
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Fri May 8 17:48:23 2015 +0200

    drm-intel-nightly: 2015y-05m-08d-15h-47m-50s UTC integration manifest

==Bug detailed description==
-----------------------------
Clean boot system, dmesg reports call trace.
[    2.683547] WARNING: CPU: 0 PID: 1215 at drivers/gpu/drm/drm_irq.c:1159 drm_wait_one_vblank+0x3b/0x16d [drm]()
[    2.683548] vblank not available on crtc 0, ret=-22
[    2.683550] Modules linked in: i915 button video drm_kms_helper drm
[    2.683552] CPU: 0 PID: 1215 Comm: kworker/u16:3 Not tainted 4.1.0-rc2_drm-intel-nightly_a1e469_20150509+ #398
[    2.683556] Workqueue: events_unbound async_run_entry_fn
[    2.683558]  0000000000000000 0000000000000009 ffffffff817a66cc ffff88014937f8b8
[    2.683559]  ffffffff8103ebde 0000000000000246 ffffffffa0005a47 0000000000000000
[    2.683561]  ffff880002c83000 0000000000000000 ffff880002cb1800 0000000000000009
[    2.683561] Call Trace:
[    2.683565]  [<ffffffff817a66cc>] ? dump_stack+0x40/0x50
[    2.683566]  [<ffffffff8103ebde>] ? warn_slowpath_common+0x98/0xb0
[    2.683572]  [<ffffffffa0005a47>] ? drm_wait_one_vblank+0x3b/0x16d [drm]
[    2.683573]  [<ffffffff8103ec3b>] ? warn_slowpath_fmt+0x45/0x4a
[    2.683577]  [<ffffffffa0005a47>] ? drm_wait_one_vblank+0x3b/0x16d [drm]
[    2.683580]  [<ffffffff813fc894>] ? __pm_runtime_resume+0x5b/0x6a
[    2.683617]  [<ffffffffa00d37a3>] ? intel_finish_crtc_commit+0x47/0x10b [i915]
[    2.683620]  [<ffffffffa0056d24>] ? drm_atomic_helper_commit_planes+0x170/0x1a9 [drm_kms_helper]
[    2.683651]  [<ffffffffa00d48df>] ? __intel_set_mode+0x8cb/0x959 [i915]
[    2.683680]  [<ffffffffa00d9da6>] ? intel_crtc_set_config+0x3e6/0x531 [i915]
[    2.683685]  [<ffffffffa0018203>] ? drm_modeset_lock+0x4e/0xa3 [drm]
[    2.683692]  [<ffffffffa000c2be>] ? drm_mode_set_config_internal+0x4e/0xd2 [drm]
[    2.683694]  [<ffffffffa0058fc5>] ? restore_fbdev_mode+0xac/0xc3 [drm_kms_helper]
[    2.683697]  [<ffffffffa005a7c6>] ? drm_fb_helper_restore_fbdev_mode_unlocked+0x1e/0x54 [drm_kms_helper]
[    2.683699]  [<ffffffffa005a82a>] ? drm_fb_helper_set_par+0x2e/0x32 [drm_kms_helper]
[    2.683731]  [<ffffffffa00e65e7>] ? intel_fbdev_set_par+0x11/0x55 [i915]
[    2.683734]  [<ffffffff8137e8be>] ? fbcon_init+0x2fd/0x406
[    2.683736]  [<ffffffff813d432f>] ? visual_init+0xaf/0x102
[    2.683737]  [<ffffffff813d5881>] ? do_bind_con_driver+0x19e/0x2c2
[    2.683739]  [<ffffffff813d5c59>] ? do_take_over_console+0x12c/0x15c
[    2.683740]  [<ffffffff8137dfad>] ? do_fbcon_takeover+0x53/0x97
[    2.683743]  [<ffffffff810549dc>] ? notifier_call_chain+0x35/0x59
[    2.683746]  [<ffffffff81054c23>] ? __blocking_notifier_call_chain+0x43/0x5b
[    2.683748]  [<ffffffff8138603b>] ? lock_fb_info+0x12/0x2f
[    2.683750]  [<ffffffff81387856>] ? register_framebuffer+0x26c/0x2a2
[    2.683752]  [<ffffffffa005aadb>] ? drm_fb_helper_initial_config+0x2ad/0x34a [drm_kms_helper]
[    2.683754]  [<ffffffff81055b8f>] ? async_run_entry_fn+0x2d/0xbf
[    2.683756]  [<ffffffff8104f985>] ? process_one_work+0x1b2/0x31d
[    2.683757]  [<ffffffff8105026f>] ? worker_thread+0x265/0x351
[    2.683758]  [<ffffffff8105000a>] ? cancel_delayed_work_sync+0xa/0xa
[    2.683760]  [<ffffffff81053ee1>] ? kthread+0xce/0xd6
[    2.683762]  [<ffffffff81053e13>] ? kthread_create_on_node+0x162/0x162
[    2.683763]  [<ffffffff817ac5d2>] ? ret_from_fork+0x42/0x70
[    2.683765]  [<ffffffff81053e13>] ? kthread_create_on_node+0x162/0x162
[    2.683766] ---[ end trace 34f9258a083cee04 ]---

==Reproduce steps==
---------------------------- 
1. Clean boot system
Comment 1 ye.tian 2015-06-17 07:42:06 UTC
This bug still exist on the latest drm-intel-next-fixes_41d232 branch kernel, but It has go away on the latest drm-intel-nightly branch kernel.
Comment 2 Carl Michal 2015-07-28 18:04:57 UTC
I see the same thing on an Dell XPS 13 (9343) with 4.2rc4:


[    1.669648] ------------[ cut here ]------------
[    1.669659] WARNING: CPU: 1 PID: 54 at drivers/gpu/drm/drm_irq.c:1162 drm_wait_one_vblank+0x16e/0x1c0 [drm]()
[    1.669660] vblank not available on crtc 0, ret=-22
[    1.669692] Modules linked in: pcspkr evdev input_leds mac_hid serio_raw i2c_i801 lpc_ich rtsx_pci_ms memstick shpchp mei_me mei btusb btrtl btb
cm btintel bluetooth rfkill dell_led i915 snd_hda_codec_realtek snd_hda_codec_generic drm_kms_helper snd_hda_intel drm snd_hda_codec snd_hda_core s
nd_hwdep intel_gtt i2c_algo_bit fan thermal wmi battery int3403_thermal snd_soc_rt286 snd_soc_rl6347a snd_soc_core snd_compress snd_pcm_dmaengine s
nd_pcm snd_timer snd i2c_hid(+) soundcore hid int3400_thermal video i2c_designware_platform dw_dmac i2c_designware_core dw_dmac_core snd_soc_sst_ac
pi processor_thermal_device gpio_lynxpoint 8250_dw intel_soc_dts_iosf tpm_crb i2c_core int3402_thermal spi_pxa2xx_platform int340x_thermal_zone tpm
 iosf_mbi acpi_thermal_rel acpi_pad ac button processor sch_fq_codel ip_tables
[    1.669703]  x_tables ext4 crc16 mbcache jbd2 sd_mod rtsx_pci_sdmmc atkbd libps2 ahci libahci libata scsi_mod xhci_pci ehci_pci ehci_hcd xhci_hc
d rtsx_pci usbcore usb_common i8042 serio sdhci_acpi sdhci led_class mmc_core
[    1.669706] CPU: 1 PID: 54 Comm: kworker/u8:1 Not tainted 4.2.0-rc4-mainline #1
[    1.669707] Hardware name: Dell Inc. XPS 13 9343/0TRX4F, BIOS A04 05/15/2015
[    1.669712] Workqueue: events_unbound async_run_entry_fn
[    1.669714]  0000000000000000 0000000056d893f3 ffff8800d9bd76e8 ffffffff81565fb9
[    1.669716]  0000000000000000 ffff8800d9bd7740 ffff8800d9bd7728 ffffffff810737a6
[    1.669718]  0000000100000000 ffff8800d90de800 ffff8800d90de800 0000000000000000
[    1.669719] Call Trace:
[    1.669724]  [<ffffffff81565fb9>] dump_stack+0x4c/0x6e
[    1.669726]  [<ffffffff810737a6>] warn_slowpath_common+0x86/0xc0
[    1.669729]  [<ffffffff81073835>] warn_slowpath_fmt+0x55/0x70
[    1.669735]  [<ffffffffa04643fe>] drm_wait_one_vblank+0x16e/0x1c0 [drm]
[    1.669766]  [<ffffffffa05a5cc2>] intel_finish_crtc_commit+0x162/0x170 [i915]
[    1.669770]  [<ffffffffa04df1c0>] drm_atomic_helper_commit_planes+0x170/0x200 [drm_kms_helper]
[    1.669796]  [<ffffffffa05a6eed>] __intel_set_mode+0x8ad/0xb80 [i915]
[    1.669821]  [<ffffffffa05addb9>] intel_crtc_set_config+0x2c9/0x600 [i915]
[    1.669828]  [<ffffffffa046c9f6>] drm_mode_set_config_internal+0x66/0x100 [drm]
[    1.669832]  [<ffffffffa04e24f2>] restore_fbdev_mode+0xc2/0xf0 [drm_kms_helper]
[    1.669835]  [<ffffffffa04e4459>] drm_fb_helper_restore_fbdev_mode_unlocked+0x29/0x70 [drm_kms_helper]
[    1.669837]  [<ffffffffa04e44c2>] drm_fb_helper_set_par+0x22/0x40 [drm_kms_helper]
[    1.669860]  [<ffffffffa05bc63a>] intel_fbdev_set_par+0x1a/0x60 [i915]
[    1.669863]  [<ffffffff8131c6e8>] fbcon_init+0x538/0x5c0
[    1.669866]  [<ffffffff81395aee>] visual_init+0xce/0x130
[    1.669868]  [<ffffffff8139761e>] do_bind_con_driver+0x1be/0x3e0
[    1.669870]  [<ffffffff81397b79>] do_take_over_console+0x149/0x1a0
[    1.669873]  [<ffffffff8156515e>] ? printk+0x55/0x6b
[    1.669875]  [<ffffffff8131c7c7>] do_fbcon_takeover+0x57/0xb0
[    1.669876]  [<ffffffff81320980>] fbcon_event_notify+0x660/0x760
[    1.669878]  [<ffffffff810920de>] notifier_call_chain+0x4e/0x80
[    1.669880]  [<ffffffff8109249b>] __blocking_notifier_call_chain+0x4b/0x70
[    1.669881]  [<ffffffff810924d6>] blocking_notifier_call_chain+0x16/0x20
[    1.669884]  [<ffffffff8132677b>] fb_notifier_call_chain+0x1b/0x20
[    1.669885]  [<ffffffff81328975>] register_framebuffer+0x215/0x350
[    1.669889]  [<ffffffffa04e473f>] drm_fb_helper_initial_config+0x25f/0xb20 [drm_kms_helper]
[    1.669908]  [<ffffffffa05bd0eb>] intel_fbdev_initial_config+0x1b/0x20 [i915]
[    1.669910]  [<ffffffff81093c1c>] async_run_entry_fn+0x4c/0x160
[    1.669912]  [<ffffffff8108b49b>] process_one_work+0x14b/0x440
[    1.669914]  [<ffffffff8108b7d8>] worker_thread+0x48/0x4a0
[    1.669917]  [<ffffffff8108b790>] ? process_one_work+0x440/0x440
[    1.669919]  [<ffffffff81091378>] kthread+0xd8/0xf0
[    1.669921]  [<ffffffff810912a0>] ? kthread_worker_fn+0x170/0x170
[    1.669923]  [<ffffffff8156b89f>] ret_from_fork+0x3f/0x70
[    1.669925]  [<ffffffff810912a0>] ? kthread_worker_fn+0x170/0x170
[    1.669926] ---[ end trace 69072b58e579403f ]---
Comment 3 Timo Aaltonen 2015-08-10 16:45:55 UTC
tested -next 07-31, where this one doesn't occur, but v4.2-rc6 is still affected
Comment 5 Carl Michal 2015-08-12 23:12:45 UTC
I tried test these on 4.2rc5.

The "cleaner" patch gives a similar backtrace to before. The other one doesn't apply cleanly to 4.2rc5 or 4.2rc6. The chunk at 13267 in intel_display.c changes a line that doesn't exist.

Is there another patch needed before this?
Comment 6 Carl Michal 2015-08-12 23:20:50 UTC
sorry, I get it, you wanted both patches at once...

With both patches applied it does seem to solve the issue.

Thanks!
Comment 7 Jani Nikula 2015-10-07 14:27:54 UTC
The patches have been applied, closing. Thanks for the report.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.